--- a/servicios.html
+++ b/servicios.html
@@ -4,8 +4,78 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
-    <title>DataBox</title>
+    <title>Servicios</title>
+    <script type="text/javascript">
 
+      function analisis_de_factibilidad_del_sistema(){
+        alert("El costo del servicio de Analisis de factibilidad del sistema es de: $200.00");
+        proceso();
+      }
+      function creacion_base_de_datos(){
+        alert("El costo del servicio de Creacion de base de datos es de: $250.00");
+        proceso();
+      }
+      function software_ala_medida_dela_empresa(){
+        alert("El costo del servicio de Software a la medida de la empresa es de: $1500.00");
+        proceso();
+      }
+      function analisis_de_datos(){
+        alert("El costo del servicio de Analisis de datos es de: $400.00");
+        proceso();
+      }
+      function transformacion_digital_en_sistema_de_facturacion(){
+        alert("El costo del servicio de Transformacion digital en sistema de facturacion es de: $750.00");
+        proceso();
+      }
+      function asesoria_de_innovacion_digital(){
+        alert("El costo del servicio de Asesoria de innovacion digital es de: $150.00");
+        proceso();
+      }
+      function prototipo_o_aplicacionmovil(){
+        alert("El costo del servicio de Diseño de prototipo del sistema de facturación o aplicación móvil es de: $250.00");
+        proceso();
+      }
+      function garantia_y_mantenimiento(){
+        alert("El costo del servicio de Garantia y mantenimiento es de: $200.00");
+        proceso();
+      }
+      function ecomerce(){
+        alert("El costo del servicio de Integración de compras en línea (e-comerce) es de: $250.00");
+        proceso();
+      }
+      function proceso(){
+        var pagapecausa= prompt("¿Desea contratar este servicio?(s/n)").toLocaleLowerCase();
+        if (pagapecausa=="s"){
+          var nombre=prompt("Ingrese su nombre completo: ");
+          if (nombre === null || nombre.trim() === ""){
+            alert("Te has saltado un campo necesario. El formulario no fue terminado");
+            return null;//Sale
+          }
+          var nacionalidad=prompt("Ingrese su nacionalidad: ");
+          if (nacionalidad === null || nacionalidad.trim() === ""){
+            alert("Te has saltado un campo necesario. El formulario no fue terminado");
+            return null;//Sale
+          }
+          var telefono=parseInt(prompt("Ingrese su numero de telefono"));
+          if (telefono === null || isNaN(telefono) || telefono <= 0){
+            alert("Te has saltado un campo necesario. El formulario no fue terminado");
+            return null;//Sale
+          }
+          var correo= prompt("Ingrese su correo electronico");
+          if (correo === null || correo.trim() === ""){
+            alert("Te has saltado un campo necesario. El formulario no fue terminado");
+            return null;//Sale
+          }
+          alert(
+            "Muchas gracias por confiar en Databox\n"+
+            "Nuestro equipo especializado en el servicio que contrataste se pondra en contacto con tigo");
+        }//del primer if 
+        else{
+          alert("Nuestros servicios Databox siempre disponibles para ti");
+        }
+      }
+
+    </script>
 
 </head>
 <body><!--FONDO DE TODA LA PAGINA-->
@@ -45,8 +115,9 @@
         <h1 style="color: mediumpurple;">SERVICIOS</h1>
               </div>
               <!----------FILA #1----------->
-              <div class="row"><!--Start card-->
-                <div class="col-md-4" style="text-align: start;">
+              <div class="row">
+                <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="analisis_de_factibilidad_del_sistema()">
                   <div class="card mb-3" style="max-width: 540px; height: 230px; border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
@@ -60,9 +131,12 @@
             </div>
           </div>
         </div>
+                  </button>
         </div><!--End card-->
+
         <div class="col-md-4" style="text-align: start;"><!--Start card-->
-                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="creacion_base_de_datos()">
+            <div class="card mb-3" style="max-width: 540px; height: 230px; border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="base de datos.jpg" class="img-fluid rounded-start" alt="...">
@@ -74,10 +148,13 @@
               </div>
             </div>
           </div>
-        </div>
+            </div>
+          </button>
         </div><!--End card-->
+        
         <div class="col-md-4" style="text-align: start;"><!--Start card-->
-                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="software_ala_medida_dela_empresa()">
+              <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="software.jpg" class="img-fluid rounded-start" alt="...">
@@ -90,11 +167,13 @@
             </div>
           </div>
         </div>
+          </button>
         </div><!--End card-->
       </div>
       <!----------FILA #2----------->
               <div class="row">
                 <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="analisis_de_datos()">
                   <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
@@ -108,9 +187,12 @@
             </div>
           </div>
         </div>
+                  </button>
         </div><!--End card-->
+
         <div class="col-md-4" style="text-align: start;"><!--Start card-->
-                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="transformacion_digital_en_sistema_de_facturacion()">
+            <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="facturacion electronica.jpg" class="img-fluid rounded-start" alt="...">
@@ -123,9 +205,12 @@
             </div>
           </div>
         </div>
+          </button>
         </div><!--End card-->
+
         <div class="col-md-4" style="text-align: start;"><!--Start card-->
-                  <div class="card mb-3"style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="asesoria_de_innovacion_digital()">
+              <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="asesoria.jpg" class="img-fluid rounded-start" alt="...">
@@ -138,11 +223,13 @@
             </div>
           </div>
         </div>
+          </button>
         </div><!--End card-->
       </div>
       <!----------FILA #3----------->
               <div class="row">
                 <div class="col-md-4" style="text-align: start;"><!--Start card-->
+                  <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="prototipo_o_aplicacionmovil()">
                   <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
@@ -156,9 +243,12 @@
             </div>
           </div>
         </div>
+                  </button>
         </div><!--End card-->
+
         <div class="col-md-4" style="text-align: start;"><!--Start card-->
-                  <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
+          <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="garantia_y_mantenimiento()">
+              <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
               <img src="soporte.jpg" class="img-fluid rounded-start" alt="...">
@@ -171,8 +261,11 @@
             </div>
           </div>
         </div>
+          </button>
         </div><!--End card-->
+
         <div class="col-md-4" style="text-align: start;"><!--Start card-->
+          <button type="button" class="btn btn-outline-primary p-0 w-100 h-100 text-start" data-bs-toggle="tooltip" data-bs-placement="top" title="Haz clic para ver más" onclick="ecomerce()">
                   <div class="card mb-3" style="max-width: 540px; height: 230px;border-color: blueviolet;">
           <div class="row g-0">
             <div class="col-md-4">
@@ -186,6 +279,7 @@
             </div>
           </div>
         </div>
+          </button>
         </div><!--End card-->
       </div>
 
@@ -248,7 +342,7 @@
       <div class="col-md-4" style="padding-left: 170px;">
         <h4>ACERCA</h4>
         <div class="content">
-          DataBox fue fundada en 2025, dentro de la materia de Diseño de Planes de Negocios Asociativa Cooperativa, en la institución ITCA – Fepade, sus miembros fundadores son, Esmeralda, Rodrigo, Guillermo, Anderson y Alexander estudiantes de la carrera Técnico en Ingeniería de Desarrollo de Software en su primer año, en la materia de diseño de planes de negocios en asociatividad cooperativa brindada por la Lic. Mayra García.  
+          EN DATABOX ESTAMOS COMPROMETIDOS CON LA CALIDAD DE NUESTROS SERVICIOS PARA QUE SEA UNA EXPERIENCIA INIGUALABLE Y AGRADABLE.
         </div>
       </div>
       <div class="col-md-4" style="padding-left: 200px;">
