--- a/Facturacion.html
+++ b/Facturacion.html
@@ -11,7 +11,7 @@
 <body><!--FONDO DE TODA LA PAGINA-->
   <!-------------Menu NAV de la pagina-------------->
   <header>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" data-bs-theme="dark">
       <div class="container-fluid">
         <a class="navbar-brand" href="index.html">
           <img src="logo4.png" alt="databoxLogo" height="104">
