--- a/sobrenosotros.html
+++ b/sobrenosotros.html
@@ -15,7 +15,7 @@
   <header>
     <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top" data-bs-theme="dark">
       <div class="container-fluid">
-        <a class="navbar-brand" href="index_Databox.html">
+        <a class="navbar-brand" href="index.html">
           <img src="artes y fotografias/logo4.png" alt="databoxLogo" height="104">
         </a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
